--- a/org.bitbucket.mystery_keeper.VapourSynthEditor.Plugin.FFMS2.yaml
+++ b/org.bitbucket.mystery_keeper.VapourSynthEditor.Plugin.FFMS2.yaml
@@ -1,20 +1,21 @@
 id: org.bitbucket.mystery_keeper.VapourSynthEditor.Plugin.FFMS2
-branch: '1'
+branch: 1-5.12
 runtime: org.bitbucket.mystery_keeper.VapourSynthEditor
 runtime-version: stable
 sdk: org.kde.Sdk//5.12
 build-extension: true
 separate-locales: false
 appstream-compose: false
+build-options:
+  prefix: ${FLATPAK_DEST}/extensions
 modules:
   - name: ffms2
     config-opts: 
       - --with-pic
-      - --disable-static
       - --enable-shared
-      - --prefix=/app/lib/vapoursynth
     post-install:
       - install -Dm644 --target-directory=${FLATPAK_DEST}/share/metainfo org.bitbucket.mystery_keeper.VapourSynthEditor.Plugin.FFMS2.appdata.xml
+      - appstream-compose --basename=org.bitbucket.mystery_keeper.VapourSynthEditor.Plugin.FFMS2 --prefix=${FLATPAK_DEST} --origin=flatpak org.bitbucket.mystery_keeper.VapourSynthEditor.Plugin.FFMS2
     sources: 
       - type: archive
         url: https://github.com/FFMS/ffms2/archive/2.23.tar.gz
