--- a/org.bitbucket.mystery_keeper.VapourSynthEditor.Plugin.FFMS2.yaml
+++ b/org.bitbucket.mystery_keeper.VapourSynthEditor.Plugin.FFMS2.yaml
@@ -1,7 +1,7 @@
 id: org.bitbucket.mystery_keeper.VapourSynthEditor.Plugin.FFMS2
 branch: 1-5.12
 runtime: org.bitbucket.mystery_keeper.VapourSynthEditor
-runtime-version: master
+runtime-version: stable
 sdk: org.freedesktop.Sdk//18.08
 build-extension: true
 separate-locales: false
